@@ -32,9 +32,9 @@ fullfilename = os.path.join(datadir, testfile)
                  "additional test data needed (http://xrayutilities.sf.io)")
 class TestIO_SPEC(unittest.TestCase):
     dshape = (4001,)
-    dmax = 2567926.75
+    dmax = 2567926.8
     dmin = 1.0
-    motmax = 95.407753
+    motmax = 95.40775
     motmin = 15.40775
     date = 'Mon Nov 04 21:18:05 2013'
     tpos = 2400
