@@ -1,3 +1,7 @@
+* enable creation of Python 3.12 packages
+* enable correct parsing of Sardana MCA data in spec files (by @dschick)
+* fix for using lmfit-1.3.0
+
 v1.7.6, 2023-11-16
 
 * fix parsing error due to missing header entry in Rigaku ras file
